# CppWordAssembler

./: .eslintrc.cjs  .gitignore  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json
core/: CMakeLists.txt  assembler.cpp
src/main/: index.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  main.tsx
src/renderer/src/assets/: index.scss
